# meteo_test

./: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  services.py
routes/: weather.py
templates/: weather.html
tests/: conftest.py
tests/integration/routes/: test_weather_routes.py
tests/unit/: test_services.py
