[tool.poetry]
name = "meteo-test"
version = "0.1.0"
description = ""
authors = ["Dbtzhv <denibatyzhev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
aiohttp = "^3.9.5"
geopy = "^2.4.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
